--- a/dsgrid_project/datasets/modeled/dsgrid_efs_2012_losses/dataset.toml
+++ b/dsgrid_project/datasets/modeled/dsgrid_efs_2012_losses/dataset.toml
@@ -37,6 +37,8 @@ data_schema_type = "standard"
 trivial_dimensions = ["weather_year", "model_year", "scenario", "data_source", "subsector"] 
 # TODO: do we apply the same losses for every model year? for every scenario? @ehal says: We should apply the same loss rates for every model year and scenario. Basically we should have 2012 sales (EIA 861) + these losses = 2012 annual system load (FERC 714). For other years we would want to hold the ratios between sales and annual system load constant (compared to this data point).
 
+# TODO: not sure if project association for data_source__model_year is correct here for dsgrid_efs_2012_losses. Do we expect only 2012 model year?
+
 [data_schema]
 load_data_column_dimension = "metric"
 
@@ -60,28 +62,27 @@ description = "All Sectors"
 
 [[dimensions]] # TODO - how to map?
 type = "subsector"
-name = "all-subsectors"
-display_name = "All Subsectors"  # @ehale is this right?
+name = "unspecified-subsectors"
+display_name = "Subsector Unspecified"  # @ehale is this right?
 file = "dimensions/subsectors.csv"
 module = "dsgrid.dimension.standard"
 class = "Subsector"
-description = "All Subsectors"
+description = "Subsector Unspecified"
 
-# @ehale currently data says "All" for all enduses, should we change this to "losses"?
-[[dimensions]]
+[[dimensions]] 
 type = "metric"
-name = "losses"
-display_name = "Losses"
+name = "losses" # The metric csv records just say "electricity unspecified". Should this change from losses to something else as a result?
+display_name = "Losses" # same question here
 file = "dimensions/metric.csv"
 module = "dsgrid.dimension.standard"
-class = "EnergyEndUse" # TODO: which class fits best? Do we need to make a new MetricDimension Type for Losses? https://github.com/dsgrid/dsgrid/blob/main/dsgrid/dimension/standard.py#L83-L114
-description = "Losses"
+class = "EnergyEndUse" 
+description = "Losses" # same question here
 
 [[dimensions]]
 type = "data_source"
 name = "dsgrid-efs"
-display_name = "EFS" # TODO - what should this be?
-file = "dimensions/data_source.csv" # TODO: doesn't exist; What is the data source?
+display_name = "EFS"
+file = "dimensions/data_source.csv"
 module = "dsgrid.dimension.standard"
 class = "DataSource"
 description = "dsgrid data for historical year 2012 created for the NREL Electrification Futures Study" 
@@ -91,7 +92,7 @@ description = "dsgrid data for historical year 2012 created for the NREL Electri
 type = "scenario"
 name = "Conus-2022-reference"
 display_name = "Reference"
-file = "../modeled/resstock/dimensions/scenario_conus_2022_reference.csv"
+file = "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
 description = "CONUS (Continental U.S.) 2022 Reference"
