--- a/dsgrid_project/datasets/modeled/dsgrid_efs_2012_losses/dimension_mappings.toml
+++ b/dsgrid_project/datasets/modeled/dsgrid_efs_2012_losses/dimension_mappings.toml
@@ -1,6 +1,6 @@
 # geography
 [[mappings]]
-description = "EFS Losses State to County mapping using proportion of state population in 2012" # TODO 2012 or 2020? -- is this the same as the data in eia861?
+description = "EFS Losses State to County mapping using proportion of state population in 2012"
 dimension_type = "geography"
 file = "../../historical/eia_861_annual_energy_use_state_sector/dimension_mappings/state_to_county.csv"
 mapping_type = "many_to_many_disaggregation"
