--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.toml
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.toml
@@ -86,7 +86,7 @@ description = "Combined Heat and Power and Thermal DG from the EFS study"
 type = "data_source"
 name = "dsgrid-efs-dg"
 display_name = "dsgrid EFS DG"
-file = "../..//benchmark/dsgrid_efs_2012_losses/dimensions/data_source.csv"
+file = "dimensions/data_source.csv"
 module = "dsgrid.dimension.standard"
 class = "DataSource"
 description = "dsgrid distributed generation data for historical year 2012 created for the NREL Electrification Futures Study" 
@@ -96,7 +96,7 @@ description = "dsgrid distributed generation data for historical year 2012 creat
 type = "scenario"
 name = "Conus-2022-reference"
 display_name = "Reference"
-file = "../../sector_models/resstock/dimensions/scenario_conus_2022_reference.csv"
+file = "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
 description = "CONUS (Continental U.S.) 2022 Reference"
@@ -106,7 +106,7 @@ description = "CONUS (Continental U.S.) 2022 Reference"
 type = "model_year"
 name = "Model-Year-2012"
 display_name = "2012"
-file = "../../benchmark/dsgrid_efs_2012_losses/dimensions/model_year.csv"
+file = "dimensions/model_year.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
 description = "2012 Model Year"
