--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dimension_mappings.toml
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dimension_mappings.toml
@@ -8,7 +8,7 @@ mapping_type = "many_to_many_disaggregation"
 [[mappings]] # scenario
 description = "EFS historical data to project scenarios"
 dimension_type = "scenario"
-file = "../../historical/eia_861_annual_energy_use_state_sector/dimension_mappings/scenario_to_scenario.csv"
+file = "dimension_mappings/scenario_to_scenario.csv"
 mapping_type = "duplication"
 
 [[mappings]] # metric
